@@ -1,1 +1,1 @@
-{"categories": [{"parent_id": null, "title": {"default": "Aktuelle Aussaten", "fr": "actuelle"}, "shortdescription": {"default": "Karotten, Ruebli, M\u00f6hren"}, "shops": [["ch_hobby", true], ["ch_profi", true]], "__type__": "category", "order": 1, "id": 1000}, {"parent_id": 1000, "title": {"default": "Aktuelle Aussaten2"}, "shortdescription": {"default": null}, "shops": [["ch_hobby", true], ["ch_profi", true]], "__type__": "category", "order": 1, "id": 1001}, {"parent_id": 1001, "title": {"default": "Gartenwerkzeuge"}, "shortdescription": {"default": "nuetzliches"}, "shops": [["ch_hobby", true], ["ch_profi", true]], "__type__": "category", "order": 2, "id": "1002_gartenwerkzeuge"}, {"parent_id": 1001, "title": {"default": "Gemuese"}, "shortdescription": {"default": null}, "shops": [["ch_hobby", true], ["ch_profi", true]], "__type__": "category", "order": 1, "id": "1002_gemuese"}, {"title": {"default": "Karotten"}, "__type__": "sortenuebersicht", "id": "1003_karotten", "parent_id": "1002_gemuese", "synonyms": {"de_ch": [["2010a", "Ruebli"], ["2010b", "M\u00f6hren"]]}, "shops": [["ch_hobby", true], ["ch_profi", true]], "shortdescription": {"default": null}, "order": 1}]}
+{"categories": [{"parent_id": null, "title": {"default": "Aktuelle Aussaten", "fr": "actuelle"}, "short_description": {"default": "Karotten, Ruebli, M\u00f6hren"}, "shops": [["ch_hobby", true], ["ch_profi", true]], "__type__": "category", "order": 1, "id": 1000}, {"parent_id": 1000, "title": {"default": "Aktuelle Aussaten2"}, "short_description": {"default": null}, "shops": [["ch_hobby", true], ["ch_profi", true]], "__type__": "category", "order": 1, "id": 1001}, {"parent_id": 1001, "title": {"default": "Gartenwerkzeuge"}, "short_description": {"default": "nuetzliches"}, "shops": [["ch_hobby", true], ["ch_profi", true]], "__type__": "category", "order": 2, "id": "1002_gartenwerkzeuge"}, {"parent_id": 1001, "title": {"default": "Gemuese"}, "short_description": {"default": null}, "shops": [["ch_hobby", true], ["ch_profi", true]], "__type__": "category", "order": 1, "id": "1002_gemuese"}, {"title": {"default": "Karotten"}, "__type__": "sortenuebersicht", "id": "1003_karotten", "parent_id": "1002_gemuese", "synonyms": {"de_ch": [["2010a", "Ruebli"], ["2010b", "M\u00f6hren"]]}, "shops": [["ch_hobby", true], ["ch_profi", true]], "short_description": {"default": null}, "order": 1}]}
