@@ -1,1 +1,1 @@
-{"item_groups": [{"description": {"default": "Ausfuehrliche Beschreibung"}, "measure_attributes": [{"title": {"default": "Wuchsgr\u00f6\u00dfe (mm)"}, "group": "attribute_group1", "order": 3, "value": {"count": 22.0, "unit": "mm"}, "id": "wuchsgroesse"}], "file_attributes": [{"title": {"default": "Detailbschreibung"}, "group": "documents", "order": 1, "value": "folder/document1.pdf", "id": "detailbeschreibung"}], "text_attributes": [{"title": {"default": "Reife"}, "group": "attribute_group1", "order": 1, "value": [{"url": null, "text": {"default": "Sp\u00e4t"}, "id": "spaet"}], "id": "reife"}, {"title": {"default": "Vermehrer"}, "group": "attribute_group1", "order": 2, "value": [{"url": "http://www.lebensgemeinschaftbingenheim.de", "text": {"default": "Lebensgemeinschaft Bingenheim"}, "id": "lebensgemeinschaft_bingenheim"}, {"url": "http://www....", "text": {"default": "Saatzucht Rose"}, "id": "saatzucht_rose"}], "id": "vermehrer"}], "link_attributes": [{"title": {"default": "Sortendatenbankeintrag"}, "group": "links", "order": 1, "value": "http://soten.com", "id": "sortendatenbank"}], "weekmatrix_attributes": [{"title": {"default": "Aussaat Monate"}, "group": "attribute_group1", "order": 5, "value": [true, true, false, false, false, false, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true], "id": "aussaat"}], "id": "33333_karottensorte", "title": {"default": "Karottensorte", "fr": "carotte"}, "__type__": "sortendetail", "category_ids": [1003], "parent_id": "1003_karotten", "qualities": [{"tkg": 4, "title": {"default": "Normalsaatgut"}, "id": 1, "size": null}, {"tkg": 4.8, "title": {"default": "Kaliber"}, "id": 2, "size": "1.75-2.25mm"}], "certificates": ["psr", "bioverita"], "shops": [["ch_hobby", true], ["ch_profi", true], ["ch_resell", true]], "bool_attributes": [{"title": {"default": "Fruehblueher"}, "group": "attribute_group1", "order": 4, "value": true, "id": "freuhblueher"}], "shortdescription": {"default": "Karotten, Ruebli, Moehren", "fr": "carotte"}, "order": 1}]}
+{"item_groups": [{"description": {"default": "Ausfuehrliche Beschreibung"}, "measure_attributes": [{"title": {"default": "Wuchsgr\u00f6\u00dfe (mm)"}, "group": "attribute_group1", "order": 3, "value": {"count": 22.0, "unit": "mm"}, "id": "wuchsgroesse"}], "file_attributes": [{"title": {"default": "Detailbschreibung"}, "group": "documents", "order": 1, "value": "folder/document1.pdf", "id": "detailbeschreibung"}], "text_attributes": [{"title": {"default": "Reife"}, "group": "attribute_group1", "order": 1, "value": [{"url": null, "text": {"default": "Sp\u00e4t"}, "id": "spaet"}], "id": "reife"}, {"title": {"default": "Vermehrer"}, "group": "attribute_group1", "order": 2, "value": [{"url": "http://www.lebensgemeinschaftbingenheim.de", "text": {"default": "Lebensgemeinschaft Bingenheim"}, "id": "lebensgemeinschaft_bingenheim"}, {"url": "http://www....", "text": {"default": "Saatzucht Rose"}, "id": "saatzucht_rose"}], "id": "vermehrer"}], "link_attributes": [{"title": {"default": "Sortendatenbankeintrag"}, "group": "links", "order": 1, "value": "http://soten.com", "id": "sortendatenbank"}], "weekmatrix_attributes": [{"title": {"default": "Aussaat Monate"}, "group": "attribute_group1", "order": 5, "value": [true, true, false, false, false, false, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true], "id": "aussaat"}], "id": "33333_karottensorte", "title": {"default": "Karottensorte", "fr": "carotte"}, "__type__": "sortendetail", "category_ids": [1003], "parent_id": "1003_karotten", "qualities": [{"tkg": 4, "title": {"default": "Normalsaatgut"}, "id": 1, "size": null}, {"tkg": 4.8, "title": {"default": "Kaliber"}, "id": 2, "size": "1.75-2.25mm"}], "certificates": ["psr", "bioverita"], "shops": [["ch_hobby", true], ["ch_profi", true], ["ch_resell", true]], "bool_attributes": [{"title": {"default": "Fruehblueher"}, "group": "attribute_group1", "order": 4, "value": true, "id": "freuhblueher"}], "short_description": {"default": "Karotten, Ruebli, Moehren", "fr": "carotte"}, "order": 1}]}
