@@ -1,1 +1,1 @@
-{"items": [{"description": {"default": "Ausfuehrliche Beschreibung"}, "min_sale_qty": 1, "price": [["ch_website", 2.0], ["fr_website", 3.0], ["de_website", 4.0]], "max_sale_qty": 100, "tierprices": [{"website": "de_website", "customer_group": 0, "price": 4.2, "min_sale_qty": 100}], "id": "itemka32", "sku": "itemka32", "inventory_status": 2, "weight_brutto": 0.25, "group": "pflanzgut", "title": {"default": "title", "fr": "titlefr", "de": "titlede"}, "tax_class": 2, "__type__": "sortendetail_vpe", "vpe_default": true, "unit_of_measure_id": "portion", "parent_id": "33333_karottensorte", "vpe_type_id": "saatscheibe", "shops": [["ch_hobby", true], ["ch_profi", true], ["ch_resell", true]], "order": 3, "shortdescription": {"default": "kurzbeschreibung", "fr": "dscription"}, "quality_id": "sortenquality1", "weight_netto": 0.15}]}
+{"items": [{"description": {"default": "Ausfuehrliche Beschreibung"}, "min_sale_qty": 1, "price": [["ch_website", 2.0], ["fr_website", 3.0], ["de_website", 4.0]], "max_sale_qty": 100, "tierprices": [{"website": "de_website", "customer_group": 0, "price": 4.2, "min_sale_qty": 100}], "id": "itemka32", "sku": "itemka32", "inventory_status": 2, "weight_brutto": 0.25, "group": "pflanzgut", "title": {"default": "title", "fr": "titlefr", "de": "titlede"}, "tax_class": 2, "__type__": "sortendetail_vpe", "vpe_default": true, "unit_of_measure_id": "portion", "parent_id": "33333_karottensorte", "vpe_type_id": "saatscheibe", "shops": [["ch_hobby", true], ["ch_profi", true], ["ch_resell", true]], "order": 3, "short_description": {"default": "kurzbeschreibung", "fr": "dscription"}, "quality_id": "sortenquality1", "weight_netto": 0.15}]}
